# mattstash

./: .gitignore  README.md  demo4.cast  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/architecture/: plan.md  plan_1.md  plan_2.md  plan_3.md  plan_4.md  plan_5.md  plan_6.md
.github/workflows/: ci.yml  publish.yaml  publish.yml  release.yml
docs/: caching.md  cli-reference.md  configuration.md  python-api.md  python-examples.md  video-showcase-guide.md
docs/asciicast/: demo1.cast  demo2.cast  demo3.cast  demo5.cast
scripts/: lint.sh  run-tests.sh  update-pypi.sh
server/: .env.example  .gitignore  Dockerfile  Dockerfile.multistage  QUICKSTART.md  README.md  docker-compose.prod.yml  docker-compose.yml  pytest.ini  requirements-dev.txt  requirements.txt  run-tests.sh  start.sh
server/app/: config.py  dependencies.py  main.py  rate_limit.py
server/app/middleware/: __init__.py  logging.py
server/app/models/: __init__.py  requests.py  responses.py
server/app/routers/: __init__.py  admin.py  credentials.py  db_url.py  health.py
server/app/security/: __init__.py  api_keys.py
server/k8s/: README.md  configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml
server/tests/: __init__.py  conftest.py  test_api_keys.py  test_config.py  test_dependencies.py  test_lifespan.py  test_main.py  test_middleware_logging.py  test_models.py  test_router_admin.py  test_router_credentials.py  test_router_credentials_roundtrip.py  test_router_db_url.py  test_router_health.py  test_router_helpers.py
src/mattstash/: __init__.py  bootstrap.py  cli.py  core.py  credential_store.py  db_url.py  module_functions.py  s3_client.py  version_manager.py
src/mattstash/builders/: __init__.py  db_url.py  s3_client.py
src/mattstash/cli/: __init__.py  http_client.py  main.py
src/mattstash/cli/handlers/: __init__.py  base.py  config.py  db_url.py  delete.py  get.py  list.py  put.py  s3_test.py  setup.py  versions.py
src/mattstash/core/: __init__.py  bootstrap.py  entry_manager.py  mattstash.py  password_resolver.py
src/mattstash/models/: __init__.py  config.py  credential.py
src/mattstash/utils/: __init__.py  config_loader.py  exceptions.py  logging_config.py  validation.py
tests/: README.md  test_advanced_coverage.py  test_cli_coverage.py  test_cli_handlers_coverage.py  test_cli_module.py  test_connection_caching.py  test_core.py  test_credential_class.py  test_credential_store.py  test_db_url_business_logic.py  test_db_url_parsing.py  test_error_handling.py  test_final_coverage.py  test_get_handler_version_fix.py  test_missing_coverage.py  test_put_handler_fix.py  test_reload.py  test_validation.py  test_version_manager.py
tests/integration/: __init__.py  conftest.py  test_cli_server_delete.py  test_cli_server_get.py  test_cli_server_list.py  test_cli_server_put.py  test_cli_workflows.py  test_end_to_end.py
