[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "mattstash"
version = "0.1.7"
description = "Tiny KeePass-powered secrets accessor with optional S3 helper and Postgres URL builder."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Matthew Kingsbury" }]
keywords = [
    "keepass", "secrets", "credentials-store", "password-manager",
    "cli", "s3", "postgres", "connection-string"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

# Hard, minimal runtime deps for the core
dependencies = [
    "pykeepass>=4.1,<5.0",
]

# Optional/extras: let users opt into boto3 only if they need S3
[project.optional-dependencies]
s3 = ["boto3>=1.28,<2.0", "botocore>=1.31,<2.0"]
config = ["PyYAML>=6.0,<7.0"]
all = ["boto3>=1.28,<2.0", "botocore>=1.31,<2.0", "PyYAML>=6.0,<7.0"]

[project.urls]
Homepage = "https://github.com/cornyhorse/mattstash"
Repository = "https://github.com/cornyhorse/mattstash"
Issues = "https://github.com/cornyhorse/mattstash/issues"
Changelog = "https://github.com/cornyhorse/mattstash/releases"

[project.scripts]
mattstash = "mattstash.cli.main:main"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
disallow_untyped_defs = true
disallow_any_unimported = false

[[tool.mypy.overrides]]
module = ["pykeepass.*", "yaml", "httpx", "httpx.*", "boto3", "boto3.*", "botocore", "botocore.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific rules
]
ignore = [
    "S101",  # allow assert in tests
    "S110",  # try-except-pass — intentional for cross-platform compat
    "S603",  # allow subprocess without shell=True check (false positives)
    "S607",  # allow partial executable path
    "UP006", # non-pep585-annotation — needed for Python 3.9 compat (List vs list)
    "UP035", # deprecated-import — typing imports needed for Python 3.9 compat
    "UP045", # non-pep604-annotation-optional — Optional[X] needed for Python 3.9
    "SIM105", # contextlib.suppress — not always clearer than try/except/pass
    "SIM108", # ternary — not always more readable for multi-branch logic
    "SIM117", # nested with — often clearer when lines are long
    "RUF022", # __all__ sorting — not critical
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "S108", "S110"]
